--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="menu_home">Home</string>
     <string name="menu_simple">Simple Mode</string>
     <string name="menu_overkill">Overkill Mode</string>
+
+    <string name="p1_tag">player1Tag</string>
+    <string name="p2_tag">player2Tag</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
