--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,15 @@
 <resources>
     <string name="app_name">Overkill</string>
     <string name="action_settings">Settings</string>
+    <string name="error">Error</string>
+    <string name="error_divide_by_zero">Divide by zero not allowed!</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Overkill</string>
     <string name="nav_header_subtitle">A Health Point Tracking App</string>
     <string name="nav_header_desc">Navigation header</string>
+    <string name="ok">Ok</string>
+    <string name="simple_calc_default">0</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_simple">Simple Mode</string>
@@ -13,6 +17,4 @@
 
     <string name="p1_tag">player1Tag</string>
     <string name="p2_tag">player2Tag</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
